<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_goods"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >
		
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/name" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/guige" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/type" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/number" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/code" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gongyingshang" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/black" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="500px"
            android:divider="@null" />
    </LinearLayout>

</LinearLayout>